--- a/src/css/housing/housing.css
+++ b/src/css/housing/housing.css
@@ -208,6 +208,11 @@ button,
   gap: 10px;
   display: none;
 }
+@media (min-width: 1024px) {
+  .theme-switcher {
+    display: flex;
+  }
+}
 
 .lang {
   position: relative;
@@ -332,6 +337,287 @@ button,
   }
 }
 
+.housing-programs {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  padding-top: 50px;
+}
+.housing-programs__list {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  align-items: center;
+}
+@media (min-width: 1024px) {
+  .housing-programs__list {
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: normal;
+    gap: 20px;
+  }
+}
+.housing-programs__header {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.housing-programs__title {
+  font-size: clamp(24px, 5vw, 48px);
+  color: #3B3E4F;
+}
+.housing-programs__item {
+  width: 100%;
+  max-width: 535px;
+  transition: border-color 0.3s ease-in;
+  position: relative;
+  border-bottom: 1px solid #3B3E4F;
+  padding-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+}
+.housing-programs__item img {
+  width: 100%;
+}
+.housing-programs__item-arrow {
+  display: block;
+  opacity: 0;
+  transition: opacity 0.3s ease-in;
+  color: white;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 3;
+}
+.housing-programs__item-image {
+  position: relative;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  transition: max-height 0.4s cubic-bezier(0.4, 0, 0.2, 1), transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 1;
+}
+.housing-programs__item-filter {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(91, 196, 203, 0.74);
+  opacity: 0;
+  transition: opacity 0.3s ease-in;
+  z-index: 2;
+  display: block;
+}
+.housing-programs__item-content {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  color: #3B3E4F;
+}
+.housing-programs__item-title {
+  font-size: clamp(16px, 2vw, 20px);
+  transition: color 0.3s ease-in;
+}
+.housing-programs__item-description {
+  font-size: clamp(14px, 1.5vw, 16px);
+}
+.housing-programs__item-link-text {
+  font-size: clamp(15px, 2vw, 20px);
+  font-weight: 600;
+  color: #3B3E4F;
+  transition: color 0.3s ease-in;
+}
+.housing-programs__item:hover {
+  border-color: #5BC4CB;
+}
+.housing-programs__item:hover .housing-programs__item-arrow {
+  opacity: 1;
+}
+.housing-programs__item:hover .housing-programs__item-filter {
+  opacity: 1;
+}
+.housing-programs__item:hover .housing-programs__item-link-text, .housing-programs__item:hover .housing-programs__item-title {
+  color: #5BC4CB;
+}
+@media (min-width: 1024px) {
+  .housing-programs {
+    gap: 70px;
+  }
+}
+
+.faq {
+  width: 100%;
+}
+.faq__container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+@media (min-width: 1024px) {
+  .faq__container {
+    gap: 70px;
+  }
+}
+.faq__title {
+  font-size: clamp(24px, 5vw, 48px);
+  color: #3B3E4F;
+}
+
+.accordion {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.accordion__item {
+  width: 100%;
+  border-bottom: 1px solid #DDE6EB;
+  cursor: pointer;
+  padding-bottom: 30px;
+}
+.accordion__item-title {
+  font-size: clamp(16px, 1.2vw, 20px);
+  font-weight: 500;
+}
+.accordion__header {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.accordion__header-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 20px;
+}
+.accordion__btn {
+  padding: 10px 15px;
+  border-radius: 50%;
+  color: #5BC4CB;
+  transition: all 0.3s ease-in;
+}
+.accordion__btn:hover {
+  background-color: #DDE6EB;
+}
+.accordion__body {
+  overflow: hidden;
+  max-height: 0;
+  transition: max-height 0.3s ease-in, padding-top 0.3s ease-in;
+}
+.accordion__body.is-expanded {
+  max-height: 1000px;
+  padding-top: 30px;
+}
+
+.schedule {
+  padding: 0 10px;
+}
+.schedule__container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+@media (min-width: 1024px) {
+  .schedule__container {
+    gap: 70px;
+  }
+}
+.schedule__title {
+  font-size: clamp(24px, 5vw, 48px);
+  color: #3B3E4F;
+}
+.schedule__description {
+  font-size: clamp(14px, 2vw, 24px);
+}
+.schedule__list {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  align-items: center;
+  padding: 10px 0;
+}
+@media (min-width: 1024px) {
+  .schedule__list {
+    width: 100%;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    gap: 50px;
+  }
+}
+.schedule__item {
+  width: 100%;
+  max-width: 383px;
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
+}
+.schedule__item-header {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+.schedule__item-grade {
+  font-size: clamp(14px, 1.5vw, 16px);
+  font-weight: 500;
+}
+.schedule__item-name {
+  font-size: clamp(16px, 2vw, 20px);
+  font-weight: 400;
+}
+.schedule__item-time {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.schedule__item-time-title {
+  font-size: clamp(14px, 1.5vw, 16px);
+  font-weight: 500;
+}
+.schedule__item-btn {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 0;
+  border-radius: 12px;
+  border: 1px solid transparent;
+  background-color: #CAA44D;
+  transition: all 0.3s ease-in;
+}
+@media (min-width: 1024px) {
+  .schedule__item-btn {
+    padding: 35px 0;
+  }
+}
+.schedule__item-btn:hover {
+  background-color: #5BC4CB;
+}
+.schedule__item-btn:active {
+  border-color: black;
+}
+.schedule__item-btn-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+}
+.schedule__item-btn-text {
+  font-size: clamp(14px, 1.5vw, 16px);
+  color: white;
+}
+.schedule__item-btn-arrow {
+  color: white;
+}
+
 .footer {
   width: 100%;
   padding: 60px 20px 52px 20px;
@@ -441,4 +727,15 @@ button,
   max-width: 681px;
   -o-object-fit: cover;
      object-fit: cover;
+}
+.footer__schedule {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.footer__schedule-item {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
 }/*# sourceMappingURL=housing.css.map */
