--- a/src/css/housing/housing.scss
+++ b/src/css/housing/housing.scss
@@ -3,6 +3,7 @@ $color-main-yellow: #CAA44D;
 $color-text-gray: #3B3E4F;
 $color-light-gray: #FAFCFD;
 $color-green: #48C95F;
+$color-border-gray: #DDE6EB;
 
 @mixin align-center-gap($gap){
     display: flex;
@@ -209,6 +210,9 @@ button,
 .theme-switcher{
     @include align-center-gap(10px);
     display: none;
+    @media(min-width: 1024px){
+      display: flex;
+    }
 }
 
 
@@ -326,6 +330,251 @@ button,
   }
 }
 
+.housing-programs{
+  width: 100%;
+  @include flex-column-gap(40px);
+  padding-top: 50px;
+  &__list{
+    @include flex-column-gap(50px);
+    align-items: center;
+    @media(min-width: 1024px){
+      width: 100%;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: normal;
+      gap: 20px;
+    }
+  }
+  &__header{
+    @include justify-between-align-center;
+  }
+  &__title{
+    font-size: clamp(24px, 5vw, 48px);
+    color: $color-text-gray;
+  }   
+  &__item{
+    width: 100%;
+    max-width: 535px;
+    transition: border-color .3s ease-in;
+    position: relative;
+    border-bottom: 1px solid $color-text-gray;
+    padding-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    img{
+      width: 100%;
+    }
+    &-arrow{
+      display: block;
+      opacity: 0;
+      transition: opacity .3s ease-in;
+      color: white;
+      position: absolute;
+      top: 0;
+      right: 0;
+      z-index: 3;
+    }
+    &-image{
+      position: relative;
+      width: 100%;
+      // height: 100%;
+      object-fit: cover;
+      transition: max-height 0.4s cubic-bezier(0.4,0,0.2,1), transform 0.4s cubic-bezier(0.4,0,0.2,1);
+      z-index: 1;
+    }
+    &-filter{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba($color-blue, 0.74);
+      opacity: 0;
+      transition: opacity .3s ease-in;
+      z-index: 2;
+      display: block;
+    }
+    &-content{
+      margin-top: 50px;
+      @include flex-column-gap(30px);
+      color: $color-text-gray;
+    }
+    &-title{
+      font-size: clamp(16px, 2vw, 20px);
+      transition: color .3s ease-in;
+    }
+    &-description{
+      font-size: clamp(14px, 1.5vw, 16px);
+    }
+    &-link{
+      &-text{
+        font-size: clamp(15px, 2vw, 20px);
+        font-weight: 600;
+        color: $color-text-gray;
+        transition: color .3s ease-in;
+      }
+    }
+    
+    &:hover{
+      border-color: $color-blue;
+      .housing-programs__item-arrow{
+        opacity: 1;
+      }
+      .housing-programs__item-filter{
+        opacity: 1;
+      }
+      .housing-programs__item-link-text , .housing-programs__item-title{
+        color: $color-blue;
+      }
+    }
+  }
+  @media(min-width: 1024px){
+    gap: 70px;
+}}
+
+.faq{ 
+  width: 100%;
+  &__container{
+    width: 100%;
+    @include flex-column-gap(40px);
+    @media(min-width: 1024px){
+      gap: 70px;
+    }
+  }
+  &__title{
+    font-size: clamp(24px, 5vw, 48px);
+    color: $color-text-gray;
+  }
+}
+
+.accordion{
+  width: 100%;
+  @include flex-column-gap(30px);
+  &__item{
+    width: 100%;
+    border-bottom: 1px solid $color-border-gray;
+    cursor: pointer;
+    padding-bottom: 30px;
+    &-title{
+      font-size: clamp(16px, 1.2vw, 20px);
+      font-weight: 500;
+    }
+  }
+  &__header{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    // padding-bottom: 30px;
+    &-container{
+      @include align-center-gap(20px);
+    }
+  }
+  &__btn{
+    padding: 10px 15px;
+    border-radius: 50%;
+    color: $color-blue;
+    transition: all .3s ease-in;
+    &:hover{
+      background-color: $color-border-gray;
+    }
+  }
+  &__body{
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height 0.3s ease-in, padding-top 0.3s ease-in;
+
+  }
+  &__body.is-expanded {
+    max-height: 1000px;
+    padding-top: 30px;
+  }
+}
+
+.schedule{
+  padding: 0 10px ; 
+  &__container{
+    width: 100%;
+    @include flex-column-gap(40px);
+    @media(min-width: 1024px){
+      gap: 70px;
+    }
+  } 
+  &__title{
+    font-size: clamp(24px, 5vw, 48px);
+    color: $color-text-gray;
+  }
+  &__description{
+    font-size: clamp(14px, 2vw, 24px);
+  }
+  &__list{
+    @include flex-column-gap(40px);
+    align-items: center;
+    padding: 10px 0;
+    @media(min-width: 1024px){
+      width: 100%;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+      gap: 50px;
+    }
+  }
+  &__item{
+    width: 100%;
+    max-width: 383px;
+    @include flex-column-gap(35px);
+    &-header{
+      @include flex-column-gap(25px);
+    }
+    &-grade{
+      font-size: clamp(14px, 1.5vw, 16px);
+      font-weight: 500;
+    }
+    &-name{
+      font-size: clamp(16px, 2vw, 20px);
+      font-weight: 400;
+    }
+    &-time{
+      @include flex-column-gap(10px);
+      &-title{
+        font-size: clamp(14px, 1.5vw, 16px);
+        font-weight: 500;
+      }
+    }
+    &-btn{
+      width: 100%;
+      @include flex-full-center();
+      padding: 20px 0;
+      border-radius: 12px;
+      border: 1px solid transparent;
+      background-color: $color-main-yellow;
+      transition: all .3s ease-in;
+
+      @media(min-width: 1024px){
+        padding: 35px 0;
+      }
+      &:hover{
+        background-color: $color-blue;
+      }
+      &:active{
+        border-color: black;
+      }
+      &-container{
+        @include align-center-gap(10px);
+      }
+      &-text{
+        font-size: clamp(14px, 1.5vw, 16px);
+        color: white;
+      }
+      &-arrow{
+        color: white;
+      }
+
+
+    }
+  }
+}
+
 .footer{
     width: 100%;
     padding: 60px 20px 52px 20px;
@@ -410,5 +659,12 @@ button,
         object-fit: cover;
       }
     }
+
+  &__schedule{
+    @include flex-column-gap(10px);
+    &-item{
+      @include align-center-gap(10px);
+    }
+  }
   }
   
