--- a/src/css/news/news.css
+++ b/src/css/news/news.css
@@ -299,11 +299,13 @@ button,
   flex-direction: column;
   align-items: center;
   gap: 110px;
-  padding: 0 10px 50px 10px;
+  padding: 40px 10px 50px 10px;
+  color: #3B3E4F;
 }
 @media (min-width: 1024px) {
   .main {
     padding-bottom: 110px;
+    padding-top: 70px;
   }
 }
 
@@ -330,6 +332,213 @@ button,
   .adaptive {
     max-width: 1720px;
   }
+}
+
+.news {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+.news__header {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.news__title {
+  font-size: clamp(24px, 2vw, 48px);
+}
+.news__date {
+  font-size: clamp(12px, 1.2vw, 16px);
+}
+.news__content {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.news__image {
+  width: 100%;
+}
+.news__text {
+  font-size: clamp(12px, 1.2vw, 16px);
+  line-height: 160%;
+}
+@media (min-width: 768px) {
+  .news {
+    max-width: 720px;
+  }
+}
+@media (min-width: 1024px) {
+  .news {
+    max-width: 960px;
+  }
+}
+@media (min-width: 1440px) {
+  .news {
+    max-width: 1120px;
+  }
+}
+
+.other-news {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+.other-news__title {
+  font-size: clamp(24px, 2vw, 48px);
+}
+.other-news__container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  align-items: center;
+}
+@media (min-width: 1440px) {
+  .other-news__container {
+    gap: 100px;
+  }
+}
+.other-news__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 40px;
+}
+.other-news__item {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  width: 100%;
+  max-width: 333px;
+}
+.other-news__item-title {
+  font-size: clamp(16px, 1.2vw, 20px);
+}
+.other-news__image {
+  width: 100%;
+  max-width: 333px;
+  height: 100%;
+  max-height: 440px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+@media (min-width: 1024px) {
+  .other-news {
+    gap: 100px;
+  }
+}
+
+.pagination {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+}
+.pagination__pages {
+  display: flex;
+  gap: 10px;
+}
+.pagination__page {
+  width: 25px;
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #FAFCFD;
+  transition: all 0.3s ease-in;
+  font-size: clamp(10px, 1.4vw, 16px);
+}
+.pagination__page:hover {
+  color: white;
+  background-color: #5BC4CB;
+}
+@media (min-width: 768px) {
+  .pagination__page {
+    width: 45px;
+    height: 45px;
+  }
+}
+@media (min-width: 1440px) {
+  .pagination__page {
+    width: 55px;
+    height: 55px;
+  }
+}
+.pagination__page--selected {
+  color: white;
+  background-color: #5BC4CB;
+}
+.pagination__btn {
+  padding: 10px 10px;
+  border: 1px solid transparent;
+  border-radius: 2px;
+  transition: all 0.3s ease-in;
+  font-size: clamp(10px, 1.2vw, 16px);
+}
+.pagination__btn:hover {
+  background-color: #5BC4CB;
+  color: white;
+}
+.pagination__btn:active {
+  border-color: black;
+}
+
+.common {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+.common__title {
+  font-size: clamp(24px, 2vw, 48px);
+}
+
+.accordion {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.accordion__item {
+  width: 100%;
+  border-bottom: 1px solid #DDE6EB;
+  cursor: pointer;
+}
+.accordion__item-title {
+  font-size: clamp(16px, 1.2vw, 20px);
+  font-weight: 500;
+}
+.accordion__header {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 30px;
+}
+.accordion__header-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 20px;
+}
+.accordion__btn {
+  padding: 10px 15px;
+  border-radius: 50%;
+  color: #5BC4CB;
+  transition: all 0.3s ease-in;
+}
+.accordion__btn:hover {
+  background-color: #DDE6EB;
+}
+.accordion__body {
+  overflow: hidden;
+  max-height: 0;
+  transition: max-height 0.7s ease-in-out;
+}
+.accordion__body.is-expanded {
+  max-height: 1000px;
 }
 
 .footer {
@@ -441,4 +650,15 @@ button,
   max-width: 681px;
   -o-object-fit: cover;
      object-fit: cover;
+}
+.footer__schedule {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.footer__schedule-item {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
 }/*# sourceMappingURL=news.css.map */
