--- a/src/css/news/news.scss
+++ b/src/css/news/news.scss
@@ -2,6 +2,7 @@ $color-blue:#5BC4CB;
 $color-main-yellow: #CAA44D;
 $color-text-gray: #3B3E4F;
 $color-light-gray: #FAFCFD;
+$color-border-gray: #DDE6EB;
 $color-green: #48C95F;
 
 @mixin align-center-gap($gap){
@@ -303,10 +304,12 @@ button,
   flex-direction: column;
   align-items: center;
   gap: 110px;
-  padding: 0 10px 50px 10px;
+  padding: 40px 10px 50px 10px;
   @media(min-width: 1024px){
     padding-bottom: 110px;
+    padding-top: 70px;
   }
+  color: $color-text-gray;
 }
 
 .adaptive{
@@ -323,6 +326,179 @@ button,
   }
   @media(min-width: 1920px){
     max-width: 1720px;
+  }
+}
+
+.news{
+  width: 100%;
+  @include flex-column-gap(50px);
+  &__header{
+    @include flex-column-gap(30px);
+
+  }
+  &__title{
+    font-size: clamp(24px, 2vw, 48px);
+  }
+  &__date{
+    font-size: clamp(12px, 1.2vw, 16px);
+  }
+  &__content{
+    @include flex-column-gap(30px);
+  }
+  &__image{
+    width: 100%;
+  }
+  &__text{
+    font-size: clamp(12px, 1.2vw, 16px);
+    line-height: 160%;
+  }
+
+  @media(min-width: 768px){
+    max-width: 720px;
+  }
+
+  @media(min-width: 1024px){
+    max-width: 960px;
+  }
+  
+  @media(min-width: 1440px){
+    max-width: 1120px;
+  }
+}
+
+.other-news{
+  width: 100%;
+  @include flex-column-gap(50px);
+  &__title{
+    font-size: clamp(24px, 2vw, 48px);
+  }
+  &__container{
+    width: 100%;
+    @include flex-column-gap(40px);
+    align-items: center;
+    @media(min-width: 1440px){
+      gap: 100px;
+    }
+  }
+  &__list{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 40px;
+  }
+  &__item{
+    @include flex-column-gap(50px);
+    width: 100%;
+    max-width: 333px;
+    &-title{
+      font-size: clamp(16px, 1.2vw, 20px);
+    }
+  }
+  &__image{
+    width: 100%;
+    max-width: 333px;
+    height: 100%;
+    max-height: 440px;
+    object-fit: cover;
+  }
+  @media(min-width: 1024px){
+    gap: 100px;
+  }
+}
+
+.pagination{
+  @include align-center-gap(10px);
+  &__pages{
+    display: flex;
+    gap: 10px;
+  }
+  &__page{
+    width: 25px;
+    height: 25px;
+    @include flex-full-center;
+    background-color: $color-light-gray;
+    transition: all .3s ease-in;
+    font-size: clamp(10px, 1.4vw, 16px);
+    &:hover{
+      color: white;
+      background-color: $color-blue;
+    }
+    @media(min-width: 768px){
+      width: 45px;
+      height: 45px;
+    }
+    @media (min-width: 1440px) {
+      width: 55px;
+      height: 55px;
+    }
+    &--selected{
+      color: white;
+      background-color: $color-blue;
+    }
+  }
+  &__btn{
+    padding: 10px 10px;
+    border: 1px solid transparent;
+    border-radius: 2px;
+    transition: all .3s ease-in;
+    font-size: clamp(10px, 1.2vw, 16px);
+    &:hover{
+      background-color: $color-blue;
+      color: white;
+    }
+    &:active{
+      border-color: black;
+    }
+  }
+}
+
+.common{
+  width: 100%;
+  @include flex-column-gap(50px);
+
+  &__title{
+    font-size: clamp(24px, 2vw, 48px);
+  }
+
+}
+.accordion{
+  width: 100%;
+  @include flex-column-gap(30px);
+  &__item{
+    width: 100%;
+    border-bottom: 1px solid $color-border-gray;
+    cursor: pointer;
+    &-title{
+      font-size: clamp(16px, 1.2vw, 20px);
+      font-weight: 500;
+    }
+  }
+  &__header{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 30px;
+    &-container{
+      @include align-center-gap(20px);
+    }
+  }
+  &__btn{
+    padding: 10px 15px;
+    border-radius: 50%;
+    color: $color-blue;
+    transition: all .3s ease-in;
+    &:hover{
+      background-color: $color-border-gray;
+    }
+  }
+  &__body{
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height 0.7s ease-in-out;
+  }
+  &__body.is-expanded {
+    max-height: 1000px;
   }
 }
 
@@ -408,6 +584,12 @@ button,
         width: 100%;
         max-width: 681px;
         object-fit: cover;
+      }
+    }
+    &__schedule{
+      @include flex-column-gap(10px);
+      &-item{
+        @include align-center-gap(10px);
       }
     }
   }
