--- a/src/style.scss
+++ b/src/style.scss
@@ -128,6 +128,7 @@ button,
     &__logo{
       width: 100%;
       max-width: 177px;
+      padding: 10px 0;
     }
     &__info-wrapper{
       width: 100%;
@@ -302,10 +303,11 @@ button,
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 110px;
+  gap: 50px;
   padding: 0 10px 50px 10px;
   @media(min-width: 1024px){
     padding-bottom: 110px;
+    gap: 110px;
   }
 }
 
@@ -435,7 +437,7 @@ button,
 
 .housing-programs{
   width: 100%;
-  @include flex-column-gap(70px);
+  @include flex-column-gap(40px);
 
   &__header{
     @include justify-between-align-center;
@@ -447,12 +449,10 @@ button,
   &__item{
     width: 100%;
     max-width: 385px;
-    @include flex-column-gap(50px);
     transition: border-color .3s ease-in;
     position: relative;
     border-bottom: 1px solid $color-text-gray;
     padding-bottom: 10px;
-    // overflow: hidden;
     img{
       width: 100%;
     }
@@ -488,6 +488,7 @@ button,
       display: block;
     }
     &-content{
+      margin-top: 50px;
       @include flex-column-gap(30px);
       color: $color-text-gray;
     }
@@ -509,10 +510,6 @@ button,
     
     &:hover{
       border-color: $color-blue;
-      .housing-programs__item-image{
-        max-height: 471px;
-        transform: scaleY(1.08);
-      }
       .housing-programs__item-arrow{
         opacity: 1;
       }
@@ -524,12 +521,69 @@ button,
       }
     }
   }
+  @media(min-width: 1024px){
+    gap: 70px;
+}}
+
+.slider-wrapper{
+  width: 100%;
+  overflow: visible;
+  position: relative;
+}
+
+.swiper{
+  width: 100%;
+}
+
+.housing-swiper-button-prev, .housing-swiper-button-next , .info-swiper-button-prev, .info-swiper-button-next{
+  @include flex-full-center;
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  border: 1px solid transparent;
+  background-color: white;
+  transition: background-color .3s ease-in;
+  position: absolute;
+
+  top: 50%;
+  z-index: 100;
+  &:hover{
+    background-color: $color-blue;
+    .housing-swiper-button-icon , .info-swiper-button-icon{
+      color: white;
+
+    }
+  }
+
+  @media(min-width: 1920px){
+    width: 50px;
+    height: 50px;
+  }
+}
+
+.housing-swiper-button-prev , .info-swiper-button-prev{
+  left: 0;
+  transform: translate(0, -50%) rotate(180deg);
+  @media(min-width: 768px){
+    transform: translate(-50%, -50%) rotate(180deg);
+  }
+}
+.housing-swiper-button-next , .info-swiper-button-next{
+  right: 0;
+  transform: translate(0, -50%);
+  @media(min-width: 768px){
+    transform: translate(50%, -50%);
+  }
+}
+
+.housing-swiper-button-icon , .info-swiper-button-icon{
+  color: $color-text-gray;
+  transition: color .3s ease-in;
   
 }
 
-
 .services{
-  @include flex-column-gap(66px);
+  @include flex-column-gap(36px);
   &__title{
     font-size: clamp(24px, 5vw, 48px);
     color: $color-text-gray;
@@ -539,7 +593,7 @@ button,
     align-items: center;
     @media(min-width: 1024px){
       flex-direction: row;
-      align-items: flex-start;
+      align-items: flex-end;
     }
   }
   &__item{
@@ -603,12 +657,16 @@ button,
       }
     }
   }
+  @media(min-width: 1024px){
+    gap: 66px;
+  }
 }
 
 .info{
-  @include flex-column-gap(70px);
+  width: 100%;
+  @include flex-column-gap(40px);
   color: $color-text-gray;
-  overflow: hidden;
+  // overflow: hidden;
   &__title{
     font-size: clamp(24px , 4vw , 48px);
   }
@@ -666,6 +724,9 @@ button,
         color: white;
       }
     }
+  }
+  @media(min-width: 1024px){
+    gap: 70px;
   }
 }
 
